<resources>
    <string name="app_name">Friend Tracker</string>
    <string name="my_title">Friend Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="friendCount">Friend Count:</string>
    <string name="birthday">Birthday:</string>
    <string name="location">Location:</string>
    <string name="combinedWalktime">Combined Walktime:</string>
    <string name="menu_settings">Edit</string>
    <string name="settings">Settings</string>
    <string name="user_profile">My Profile</string>
    <string name="back_button">Edit</string>
    <string name="search_title">Search</string>
    <string name="title">Title:</string>
    <string name="start_time">Choose Friends:</string>
    <string name="choose_friends">Choose Friends:</string>
    <string name="choose_location">Choose Location:</string>
    <string name="choose_date">Choose Date:</string>
    <string name="choose_start_time">Choose Start Time:</string>
    <string name="choose_end_time">Choose End Time:</string>
    <string name="meeting_title">Title:</string>
    <string name="meeting_date">Date:</string>
    <string name="meeting_start_time">Start Time:</string>
    <string name="meeting_end_time">End Time:</string>
    <string name="meeting_friends">Attendees:</string>
    <string name="number_of_friends">Number of friends:</string>
    <string name="edit_meeting_title">Title:</string>
    <string name="edit_meeting_start_time">Start Time:</string>
    <string name="edit_meeting_end_time">End Time:</string>
    <string name="edit_number_of_friends">Number of friends:</string>
    <string name="done">Done</string>
    <string name="choose_date_meeting">Choose Date</string>
    <string name="choose_location_meeting">Choose Location</string>
    <string name="choose_end_time_meeting">Choose End Time</string>
    <string name="choose_start_time_meeting">Choose Start Time</string>
    <string name="choose_friends_meeting">Choose Friends</string>
    <string name="id_user">ID</string>
    <string name="name_user">NAME</string>
    <string name="email_user">EMAIL</string>
    <string name="suggestion_interval">Meeting suggestion interval:</string>
    <string name="reminder_period">Meeting reminder notice time:</string>

</resources>