
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="2"
    android:columnCount="2"
    tools:context=".Activities.MeetingInfoActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView"
                android:layout_weight="1"
                android:text="@string/id"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/meetingInfoId"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:text="@string/meeting_title"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/meetingInfoTitle"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:text="@string/meeting_date"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/meetingInfoDate"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:text="@string/meeting_start_time"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/meetingInfoStartTime"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView4"
                android:layout_weight="1"
                android:text="@string/meeting_end_time"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/meetingInfoEndTime"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:text="@string/location"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/meetingInfoLocation"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
        </TableRow>
        <RelativeLayout>
        <ListView
            android:id="@+id/meetingAttendeesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        </RelativeLayout>
    </TableLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Activities.MeetingInfoActivity"
        android:layout_weight="1"/>

</LinearLayout>





