
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="2"
    android:columnCount="2"
    tools:context=".Activities.FriendInfoActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView1"
                android:layout_weight="1"
                android:text="@string/id"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/friendInfoId"
                android:layout_weight="1"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:text="@string/name"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/friendInfoName"
                android:layout_weight="1"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:text="@string/email"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/friendInfoEmail"
                android:layout_weight="1"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView4"
                android:layout_weight="1"
                android:text="@string/birthday"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <TextView
                android:id="@+id/friendInfoBirthday"
                android:layout_weight="1"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
        </TableRow>

    </TableLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Activities.FriendInfoActivity" />

</LinearLayout>




