<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:id="@+id/fragmentContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView"
                android:layout_weight="1"
                android:text="@string/title"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <EditText
                android:id="@+id/editTextId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:text="@string/choose_friends"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <Button
                android:id="@+id/chooseFriendsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:text="Choose Friends"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:text="@string/choose_location"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <Button
                android:id="@+id/chooseLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:text="Choose Location"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:text="@string/choose_date"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <Button
                android:id="@+id/chooseDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:text="Choose Date"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <Button
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:text="Done"/>
        </TableRow>

    </TableLayout>
</GridLayout>